Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
June 2017
Description
See for example winspool_apitest, OpenPrinter: https://reactos.org/testman/detail.php?id=33030880
_RpcClosePrinter yields the following error messages even for proper trivial cases:
err:(dll/win32/rpcrt4/ndr_contexthandle.c:86) invalid handle 7C1120C8
err:(win32ss/printing/base/winspool/printers.c:243) _RpcClosePrinter failed with exception code 6!
This needs to be analyzed and debugged extensively. It may even be a bug down in RPC fundamentals.
Attachments
Issue Links
- blocks
-
CORE-13459 #if 0'ed cases in winspool_apitest, GetPrinterData
-
- Untriaged
-