[PRINTING] - Create the actual generic handle in _LocalOpenPrinterHandle. - Fix _RpcClosePrinter call. - Enable many more tests in winspool_apitest, GetPrinterData. - Bail out with ERROR_INVALID_PARAMETER for empty strings in _MakePrinterSubKey as well. - Add the Name registry value for "Dummy Printer on LPT1" to make a test succeed.

This fixes many basic things.. which only got unnoticed, because Printing is only used in the form of API Tests so far.

CORE-13458
CORE-13459

svn path=/trunk/; revision=75207